fix issue with map resize.  SidePanel was overlapping resize handle.

--- a/src/app/components/esri-map/esri-map.component.css
+++ b/src/app/components/esri-map/esri-map.component.css
@@ -8,7 +8,7 @@
 }
 
 .esri-view {
-    height: 99%;
+    height: 100%;
     resize: both;
     overflow: auto;
 }
@@ -47,7 +47,7 @@
 .panel-container {
       position: relative;
       width: 100%;
-      height: 100%;
+      height: 98%;
 }
 
 .panel-side {
